[chore] babelrc @ plugin

--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,5 @@
     "react",
     "stage-3"
   ],
-  "plugins": ["transform-runtime"]
+  "plugins": ["transform-runtime", "transform-decorators-legacy"]
 }
