--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "a switch host tool",
   "main": "./src/main/index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.base.config.js --progress",
-    "webpack": "webpack --config ./webpack.base.config.js --progress",
+    "dev": "rimraf ./dist && cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.base.config.js --progress",
+    "dll": "rimraf ./static && webpack --config ./build/webpack.dll.config.js --progress",
+    "webpack": "cross-env NODE_ENV=production webpack --config ./build/webpack.base.config.js --progress",
     "build": "cross-env NODE_ENV=production npm run build"
   },
   "dependencies": {
@@ -33,10 +34,12 @@
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
+    "uglifyjs-webpack-plugin": "^1.1.2",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
