--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "rimraf ./dist && cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.base.config.js --progress",
     "dll": "rimraf ./static && webpack --config ./build/webpack.dll.config.js --progress",
-    "webpack": "cross-env NODE_ENV=production webpack --config ./build/webpack.base.config.js --progress",
+    "webpack": "rimraf ./dist && cross-env NODE_ENV=production webpack --config ./build/webpack.base.config.js --progress",
     "build": "cross-env NODE_ENV=production npm run build"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/react": "^16.0.29",
     "@types/react-dom": "^16.0.3",
+    "autoprefixer": "^7.2.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
