[chore] config launch

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,10 @@
       "cwd": "${workspaceRoot}",
       "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
       "program": "${workspaceRoot}/src/main/index.js",
-      "protocol": "inspector"
+      "protocol": "inspector",
+      "env": {
+        "NODE_ENV": "development"
+      }
     }
   ]
 }
